[package]
name = "gdb"
version = "0.1.0"
authors = ["Infides <rwinzler@infides.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
average = "0.11"
dotenv = "0.15"
rand = { version = "0.8.3", features = ["std_rng"] }
serenity = "0.10"
tracing = "0.1.23"
tracing-subscriber = "0.2"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]